<resources>
    <string name="app_name"><font size = "22">FLAGI</font></string>
    <string name="Europa">Europa</string>
    <string name="Azja">Azja</string>
    <string name="AmerykaPółnocna">Ameryka Północna</string>
    <string name="AmerykaPołudniowa">Ameryka Południowa</string>
    <string name="AustraliaiOceania">Australia i Oceania</string>
    <string name="Afryka">Afryka</string>
    <string name="Poprzednie">Poprzednie</string>
    <string name="Podpowiedz1">Podpowiedź 1</string>
    <string name="Nastepne">Następne</string>
    <string name="Podpowiedz2">Podpowiedź 2</string>
    <string name="Sprawdz">Sprawdź</string>
    <string name="NazwaTablicy">NazwaTablicy</string>
    <string name="Powrót">Powrót</string>
</resources>
