<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b3dcff"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Europa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gradient"
        android:text="@string/Europa"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Azja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Azja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gradient_yellow"
        android:text="@string/Azja"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Europa" />

    <Button
        android:id="@+id/AmerykaN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gardien_orange_red"
        android:text="@string/AmerykaPółnocna"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Azja" />

    <Button
        android:id="@+id/AmerykaS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gradient_red_dark"
        android:text="@string/AmerykaPołudniowa"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmerykaN" />

    <Button
        android:id="@+id/Australia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gradient_green"
        android:text="@string/AustraliaiOceania"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmerykaS" />

    <Button
        android:id="@+id/Afryka"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:height="50dp"
        android:background="@drawable/gradient_black"
        android:text="@string/Afryka"
        android:textColor="#d2e9fc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Australia" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>